// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Backdrop With Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
<button
  className="sc-hKMtZM jEvHuy"
  color="primary"
  disabled={true}
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots Button Docs 1`] = `
<button
  className="sc-hKMtZM cppIvo"
  color="primary"
  fullWidth={false}
  onClick={[Function]}
  type="button"
  variant="contained"
>
  Docs
</button>
`;

exports[`Storyshots Button Full Width 1`] = `
<button
  className="sc-hKMtZM kkkGcz"
  color="primary"
  fullWidth={true}
  type="button"
>
  FullWidth
</button>
`;

exports[`Storyshots Button Outlined 1`] = `
<button
  className="sc-hKMtZM hLIKxe"
  color="primary"
  type="button"
  variant="outlined"
>
  Outlined
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-hKMtZM cppIvo"
  color="primary"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-hKMtZM xntle"
  color="secondary"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots LoadingGuard Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots LoadingSpinner Docs 1`] = `
<svg
  aria-hidden={true}
  className="sc-gsnTZi fHfrxz sc-dkzDqf bNsdqf"
  color="primary"
  size="large"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
  />
</svg>
`;

exports[`Storyshots TextButton Docs 1`] = `
<button
  className="sc-hKMtZM cppIvo sc-eCYdqJ"
  color="primary"
  fullWidth={false}
  onClick={[Function]}
  type="button"
  variant="contained"
>
  TextButton
</button>
`;
